--- a/starter/app/src/main/res/layout/fragment_main.xml
+++ b/starter/app/src/main/res/layout/fragment_main.xml
@@ -29,7 +29,7 @@
                 android:adjustViewBounds="true"
                 android:scaleType="centerCrop"
                 app:srcCompat="@drawable/placeholder_picture_of_day"
-                app:imgOfDay="@{viewModel.picOfDay.url}"  />
+                app:imgOfDay="@{viewModel.picOfDay}"  />
 
             <TextView
                 android:id="@+id/textView"
