--- a/starter/app/src/main/res/layout/linear_view_item.xml
+++ b/starter/app/src/main/res/layout/linear_view_item.xml
@@ -25,12 +25,52 @@
             name="asteroid"
             type="com.udacity.asteroidradar.Asteroid" />
     </data>
-    <ImageView
-        android:id="@+id/mars_image"
+
+    <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
-        android:layout_height="170dp"
-        android:scaleType="centerCrop"
-        android:adjustViewBounds="true"
-        app:statusIcon="@{asteroid.potentiallyHazardous}"
-        android:padding="2dp" />
+        android:layout_height="match_parent">
+
+        <ImageView
+            android:id="@+id/asteroidStatus_image"
+            android:layout_width="79dp"
+            android:layout_height="76dp"
+            android:layout_marginStart="16dp"
+            android:layout_marginTop="24dp"
+            android:layout_marginEnd="8dp"
+            android:adjustViewBounds="true"
+            android:padding="2dp"
+            android:scaleType="centerCrop"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.75"
+            app:layout_constraintStart_toEndOf="@+id/asteroidDate_text"
+            app:layout_constraintTop_toTopOf="parent"
+            app:statusIcon="@{asteroid.potentiallyHazardous}" />
+
+        <TextView
+            android:id="@+id/asteroidName_text"
+            android:layout_width="182dp"
+            android:layout_height="50dp"
+            android:layout_marginStart="16dp"
+            android:layout_marginTop="16dp"
+            android:fontFamily="@font/roboto"
+            android:text="@{asteroid.codename}"
+            android:textColor="@android:color/white"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            tools:visibility="visible" />
+
+        <TextView
+            android:id="@+id/asteroidDate_text"
+            android:layout_width="184dp"
+            android:layout_height="41dp"
+            android:layout_marginStart="16dp"
+            android:layout_marginTop="12dp"
+            android:fontFamily="@font/roboto"
+            android:text="@{asteroid.closeApproachDate}"
+            android:textColor="@color/text_grey"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/asteroidName_text" />
+
+    </androidx.constraintlayout.widget.ConstraintLayout>
+
 </layout>
