--- a/starter/app/src/main/res/layout/fragment_detail.xml
+++ b/starter/app/src/main/res/layout/fragment_detail.xml
@@ -21,6 +21,7 @@
             android:layout_height="wrap_content"
             android:adjustViewBounds="true"
             app:asteroidStatusImage="@{asteroid.potentiallyHazardous}"
+            android:contentDescription="@string/potentionaly_hazardous_asteroid_image"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
@@ -48,6 +49,7 @@
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:text="@string/close_approach_data_title"
+                        android:contentDescription="@string/label_close_approach_date"
                         android:textColor="@color/default_text_color" />
 
                     <TextView
@@ -77,6 +79,7 @@
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
                             android:text="@string/absolute_magnitude_title"
+                            android:contentDescription="@string/label_absolute_magnitude"
                             android:textColor="@color/default_text_color" />
 
                         <TextView
@@ -91,6 +94,7 @@
 
                     <ImageView
                         android:id="@+id/help_button"
+                        android:contentDescription="@string/help_button"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:padding="16dp"
@@ -103,6 +107,7 @@
                     android:layout_height="wrap_content"
                     android:layout_marginTop="16dp"
                     android:text="@string/estimated_diameter_title"
+                    android:contentDescription="@string/label_estimated_diameter"
                     android:textColor="@color/default_text_color" />
 
                 <TextView
@@ -119,6 +124,7 @@
                     android:layout_height="wrap_content"
                     android:layout_marginTop="16dp"
                     android:text="@string/relative_velocity_title"
+                    android:contentDescription="@string/label_relative_velocity"
                     android:textColor="@color/default_text_color" />
 
                 <TextView
@@ -135,6 +141,7 @@
                     android:layout_height="wrap_content"
                     android:layout_marginTop="16dp"
                     android:text="@string/distance_from_earth_title"
+                    android:contentDescription="@string/label_distance_from_earth"
                     android:textColor="@color/default_text_color" />
 
                 <TextView
