--- a/starter/app/src/main/res/layout/fragment_main.xml
+++ b/starter/app/src/main/res/layout/fragment_main.xml
@@ -28,9 +28,11 @@
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:adjustViewBounds="true"
+                android:contentDescription="@string/image_of_the_day"
                 android:scaleType="centerCrop"
+                app:imgOfDay="@{viewModel.picOfDay}"
                 app:srcCompat="@drawable/placeholder_picture_of_day"
-                app:imgOfDay="@{viewModel.picOfDay}"  />
+                tools:ignore="ImageContrastCheck" />
 
             <TextView
                 android:id="@+id/textView"
@@ -39,7 +41,8 @@
                 android:layout_gravity="bottom"
                 android:background="#55010613"
                 android:padding="16dp"
-                android:text="@string/image_of_the_day"
+                app:imgOfDayText="@{viewModel.picOfDay}"
+                android:contentDescription="@string/image_of_the_day"
                 android:textColor="#3949AB"
                 android:textSize="20sp"
                 android:textStyle="bold" />
@@ -62,11 +65,12 @@
             android:id="@+id/status_image"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:contentDescription="@string/status_image"
             android:indeterminate="true"
-            app:neoApiStatus="@{viewModel.statusNeo}"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toRightOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
+            app:layout_constraintTop_toTopOf="parent"
+            app:neoApiStatus="@{viewModel.statusNeo}" />
     </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
